--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="tasks_header_image_content_description">Tasks header image</string>
     <string name="no_tasks_image_content_description">No tasks image</string>
     <string name="title_activity_tasks_screen">TasksScreen</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
